# embedded-wireless-latency-eval

./: LICENSE  README.md  ridgeline.R  uart-overhead-facet-ridgelines.R
analysis/: README.md  cdf.R  esp32-ble-results-reversedir.csv  esp32-ble-results.csv  esp32-inconsistent-12B.csv  esp32-nimble-hci-fix.csv  esp32-nimble-notify-write-hci-fix.csv  esp32-nimble-notify-write-override-connparams.csv  esp32-nimble-override-connparams.csv  esp32-nimble-results-notify-write.csv  esp32-nimble-results.csv  esp32-spp-chunked.csv  esp32-spp.csv  esp32-tcp-defaults.csv  esp32-tcp-modified.csv  esp32-udp-defaults.csv  esp32-udp-modified.csv  esp32-websockets-results.csv  esp32C6-802154-results.csv  espnow-test-data.csv  hc-05-test-data-faster.csv  hc-05-test-data.csv  hc-05-test-defaults.csv  increasing-baudrate-tests.csv  increasing-baudrate-transport-duration-removed.csv  lora-logs.csv  nrf24-test-data.csv  nrf24-test-results.csv  nrf52-12B-directionality.csv  nrf52-results-with-static-and-swept-trigger.csv  overall-comparison-barcharts.R  overall-esp32-comparisons.csv  ridgeline.R  rpi-node-ws-results.csv  saleae-latency-log-cleanup.R  sik-12B-rf-trig-delay-113ms.csv  sik-test-data.csv  stm32-gpio-tests.csv  stm32-ll-uart-builds.csv  uart-overhead-facet-ridgelines.R  (+1 more)
firmware/esp-802154/: 1024B-ACK.csv  1024B-FaF.csv  1024B-throughput-opt.csv  128B-ACK.csv  128B-FaF.csv  12B-ACK.csv  12B-FaF.csv  1kb-no-ack.pcapng  1kb-with-ack.pcapng  CMakeLists.txt  README.md  sdkconfig
firmware/esp-tcp/: 1024B-modified.csv  1024B.csv  128B-modified.csv  128B.csv  12B-modified.csv  12B.csv  CMakeLists.txt  README.md  sdkconfig
firmware/esp-udp/: 1024B-modified.csv  1024B.csv  128B-modified.csv  128B.csv  12B-modified.csv  12B.csv  CMakeLists.txt  README.md  sdkconfig
firmware/esp-websockets/: .gitignore  1024B.csv  128B.csv  12B.csv  C6-12B.csv  CMakeLists.txt  README.md  sdkconfig.defaults
firmware/esp32-ble/: 1024B-sc.csv  128B-sc.csv  12B-cs.csv  12B-sc.csv  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware/esp32-nimble/: 1024B-sc-defaults.csv  1024B-sc-hci-fix.csv  1024B-sc-override.csv  128B-sc-MTU20.csv  128B-sc-hci-fix.csv  128B-sc-override-conn-params.csv  128B-sc.csv  12B-cs-defaults.csv  12B-cs-hci-fix.csv  12B-cs-override.csv  12B-cs2.csv  12B-sc-hci-fix.csv  12B-sc-override.csv  12B-sc.csv  12B-sc2.csv  README.md  sdkconfig  sdkconfig.defaults
firmware/esp32-spp/: 1024B-32B-chunks.csv  1024B-64B-chunks.csv  1024B.csv  128B.csv  12B.csv  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware/espnow/: .gitignore  1024B.csv  128B.csv  12B.csv  CMakeLists.txt  LR-1024B.csv  LR-128B.csv  LR-12B.csv  README.md  sdkconfig
firmware/gpio_tests/: espIDF-o3.csv  ll-o3.csv  ll-og.csv  ll-os.csv  rpi-node.csv  stm32-ll-asm-debug.txt  stm32-ll-asm-release.txt  stm32-ll-asm-small.txt  stm32duino-o1.csv  stm32duino-og.csv  stm32duino-os.csv
firmware/hc-05/: 460800-1024B.csv  460800-1024B.sal  460800-128B.csv  460800-128B.sal  460800-12B.csv  57600-1024B.csv  57600-128B.csv  57600-128B.sal  (+6 more)
firmware/rfm95/stm-ll/: .gitignore  CMakeLists.txt  README.md
firmware/rfm95/stm-ll/libs/: rfm95.c  rfm95.h  rfm95_defines.h  rfm95_private_defines.h
firmware/rfm95/stm-ll/libs/ideetron/: AES-128_V10.c  Encrypt_V31.c  Encrypt_V31.h
firmware/rfm95/stm-ll/src/: main.c
firmware/uart_tests/stm-ll/: CMakeLists.txt  README.md
firmware/uart_tests/stm-ll/src/: fifo.c  fifo.h  main.c  uart.c  uart.h
(+194 files in other folders)
